Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Felipe Leonardo Gómez Cortés by flgomezc</title>
+    <title>Felipe L. Gómez-Cortés by flgomezc</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Felipe Leonardo Gómez Cortés</h1>
+        <h1>Felipe L. Gómez-Cortés</h1>
         <h2>personal page</h2>
         <a href="https://github.com/flgomezc" class="button"><small>Follow me on</small> GitHub</a>
       </div>
